2008-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Jam package version in script "show-platform" on "make dist".

	* show-platform (go): For "guile-pg", use placeholder "VERSION".

2008-02-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Avoid requiring procs from module (ice-9 regex).

	* guile-pg-basic-tests.scm (test:set-notice-out!-1):
	Use `regexp-exec' and `make-regexp'.

2008-02-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.35 (tag: v0.35)

2008-01-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-basic-tests.scm (test:set-notice-out!-1):
	Check by matching against regexp instead of exact string.

2008-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-basic-tests.scm (make-table!): Specify
	"WITH OIDS" explicitly.  Reported by Greg Troxel.

2007-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-basic-tests.scm (test:asynchronous-retrieval):
	After sending loop using `pg-flush' until all sent.

2007-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-basic-tests.scm (test:close): New test proc.
	(main): Use new test proc; update expected-pass number.

2007-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-abstraction-scm-tests.scm (mtest:any/all--OP): New proc.
	(main): Call it and update expected-count.

2007-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-abstraction-scm-tests.scm
	(test-m3 check-1): New internal proc.
	(test-m3): Add `between' checks.
	(main): Update expected-count.

2007-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-abstraction-scm-tests.scm (test-m3): Add `in/set' checks.
	(main): Update expected-count.

	* abstraction-scm-tests.sh: Explicitly load postgres-qcons.scm.

2007-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-abstraction-scm-tests.scm (test-m3): New proc.
	(main): Update expected-count and call `mtest-m3'.

2007-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* guile-pg-abstraction-scm-tests.scm:
	Use "abstrAction" and "abstrActions_2" as table names.
