@@ -1,3 +1,12 @@
+2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	No longer test coverage.
+
+	* coverage.sh, cov: Delete files.
+	* Makefile.am (TESTS): Remove coverage.sh.
+	(EXTRA_DIST): Remove cov.
+	(dist-hook): Delete target.
+
 2008-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Jam package version in script "show-platform" on "make dist".
